--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -14,7 +14,7 @@ article{
     margin: 0;
     width: 100%;
     height: 25rem;
-    background-image: url(imagenes/bg-barber.jpg);
+    background-image: url(../img/bg-barber.jpg);
     background-size: cover;
     background-position: 10% 50%;
     background-attachment: fixed;
