--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ nav{
 
 /* Pie de pagina */
 footer{
-     background-image: url(imagenes/bg.jpg);
+     background-image: url(../img/bg.jpg);
      height: 10%;
      text-align: center;
      padding: 30px;
