--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+*,*::after,
+*::before{
+    box-sizing: inherit;
+}
 html{
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
@@ -11,9 +15,22 @@ html::-webkit-scrollbar{
 html::-webkit-scrollbar-thumb{
     background-color: rgb(211,190,165);
 }
-*,*::after,
-*::before{
-    box-sizing: inherit;
+/* Color se seleccion de texto */
+p::selection{
+    color: whitesmoke;
+    background-color: rgb(175,143,113) ;
+}
+h1::selection{
+color: whitesmoke;
+background-color: rgb(175,143,113) ;
+}
+b::selection{
+    color: whitesmoke;
+    background-color: rgb(175,143,113) ;
+}
+li::selection{
+    color: whitesmoke;
+    background-color: rgb(175,143,113) ;
 }
 main{
     margin-top: 0;
